*********************************************************************************************
*                                  CHANGE LOG 1.0.0 - > 1.x.x                               *
*********************************************************************************************
  
  * (4/5/2011) Petr Miko
    # 198
    
      CHANGED: during downloading in EDEDB, Analyse buttons are blocked (not exactly the best way, but loading file routine dos not recognize that the file is not closed)
      CHANGED: in Vdefloader added throw ioexception in loading eeg binary / there was only print stacktrace, in case of missing eeg file jerpa froze.
      CHANGED: Working.java - counter is now limited in range of <0: Integer.MAX) - solved some display issues)
      CHANGED: solved table repaint issue when file was downloaded.  
  
  * (4/4/2011) Petr Miko
    # 197
    
      CHANGED: EDEDBControllerTest - added testing of downloading "counter" Set. Solved few bugs related to the downloading Set.
      CHANGED: solved bug in Working.java - added counter in order to eliminated display errors.    
  
  * (4/4/2011) Petr Miko
    # 196

      CHANGED: In EDEDBController is now HashSet of currently downloading file ids. Logic edited in order to use it -> solves bug of case, when user switched owner/subject mode and downloading file began report itself as corrupted.

  * (4/3/2011) Petr Miko
    # 195

      CHANGED: "working" panel visibility bug solved in EDEDBController
      CHANGED: table models of EDEDB were extendend + bug solving
      CHANGED: a bit repaired file loading in case of wrong format (only in VDefLoader) + openFile is boolean now (returns state of opening)
      ADDED:   new JUnit test files with comments for EDEDB, editing the existing ones. JUnit testing for EDEDB should be completed now.

  * (4/2/2011) Petr Miko
    # 194
     
      CHANGED: edition in build.xml (in case of testing, there was severe bug with run classpath - now within test-bin folder).