@@ -4,6 +4,7 @@ import ch.ethz.origo.jerpa.application.perspective.ededb.logic.EDEDBController;
 
 import javax.swing.*;
 import java.awt.event.ActionEvent;
+import java.awt.event.KeyEvent;
 
 /**
  * Connect action class "calling" LoginDialog.
@@ -16,6 +17,8 @@ public class ActionConnect extends AbstractAction {
 
     public ActionConnect(EDEDBController controller) {
         this.controller = controller;
+        
+        putValue(MNEMONIC_KEY, new Integer(KeyEvent.VK_C));
     }
 
     @Override
