@@ -4,6 +4,7 @@ import ch.ethz.origo.jerpa.application.perspective.ededb.logic.EDEDBController;
 import ch.ethz.origo.juigle.prezentation.JUIGLErrorInfoUtils;
 import java.awt.Desktop;
 import java.awt.event.ActionEvent;
+import java.awt.event.KeyEvent;
 import java.io.File;
 import java.io.IOException;
 import javax.swing.AbstractAction;
@@ -24,6 +25,8 @@ public class ActionOpenDownloadPath extends AbstractAction {
      */
     public ActionOpenDownloadPath(EDEDBController controller) {
         this.controller = controller;
+        
+        putValue(MNEMONIC_KEY, new Integer(KeyEvent.VK_P));
     }
 
     public void actionPerformed(ActionEvent e) {
